fix news card source overflow

--- a/src/components/NewsCard/NewsCard.css
+++ b/src/components/NewsCard/NewsCard.css
@@ -77,6 +77,11 @@
   text-decoration-skip-ink: none;
   color: rgba(182, 188, 191, 1);
   text-transform: uppercase;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
 }
 
 @media screen and (max-width: 768px) {
